# hf_model_downloader

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
scripts/: README.md  generate_modelfile.py
src/hf_model_downloader/: __init__.py  cli.py  config.py  downloader.py  env.py  errors.py
tests/: __init__.py  test_config.py  test_errors.py  test_integration.py  test_retry_classifier.py
