[project]
name = "hf-model-downloader"
version = "0.1.0"
description = "A tool for downloading and managing HuggingFace models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface_hub>=0.20.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tomli-w>=1.0.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
hfmdl = "hf_model_downloader.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hf_model_downloader"]

[tool.hatch.build.targets.sdist]
include = ["src/hf_model_downloader"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require HFMDL_INTEGRATION=1)",
]

